# turboxl

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
.github/workflows/: release.yml  verify.yml  wheel-linux.yml  wheel-macos.yml  wheel-windows.yml
cmake/: turboxlConfig.cmake.in
include/xlsxcsv/: core.hpp
python/: pyproject.toml
src/core/: cell_data.cpp  data_converter.cpp  opc_package.cpp  shared_strings_provider.cpp  sheet_stream_reader.cpp  styles_registry.cpp  workbook.cpp  zip_reader.cpp
src/csv/: csv_encoder.cpp
src/facade/: xlsx_reader.cpp
src/python/: module.cpp
tests/: test_csv_encoder.cpp  test_integration.cpp  test_opc_package.cpp  test_phase5_functionality.cpp  test_shared_strings_provider.cpp  test_sheet_discovery.cpp  test_sheet_stream_reader.cpp  test_styles_registry.cpp  test_workbook.cpp  test_zip_reader.cpp
tools/: benchmark_parity.py
